deploy/deploy_webappcolor.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-color
  namespace: default
  labels:
    app: webapp-color
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-color
  template:
    metadata:
      labels:
        app: webapp-color
    spec:
      containers:
      - name: webapp-color
        image: kodekloud/webapp-color
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-color-svc
  namespace: default
spec:
  selector:
    app: webapp-color
  ports:
    - targetPort: 8080
      port: 8080
