deploy/nginxplain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxplain-deployment
  labels:
    app: nginxplain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxplain
  template:
    metadata:
      labels:
        app: nginxplain
    spec:
      containers:
      - name: nginxplain
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginxplain-svc
spec:
  selector:
    app: nginxplain
  ports:
    - targetPort: 80
      port: 80
