deploy/springpet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springpet-deploy
  labels:
    app: springpet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springpet
  template:
    metadata:
      labels:
        app: springpet
    spec:
      containers:
      - name: springpet
        image: docker.io/66816681/spring-app   #custom image based on spring-petclinic 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springpet-svc
spec:
  selector:
    app: springpet
  ports:
    - targetPort: 8080
      port: 8081         #this svc will be available on port 8081
