deploy/deploy_webappcolor_istio.yaml
# v1 is - green, v2 is - blue
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-color-v1
  namespace: default
  labels:
    app: webapp-color
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-color
  template:
    metadata:
      labels:
        app: webapp-color
        version: v1
    spec:
      containers:
      - name: webapp-color
        image: kodekloud/webapp-color
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-color-v2
  namespace: default
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-color
  template:
    metadata:
      labels:
        app: webapp-color
        version: v2
    spec:
      containers:
      - name: webapp-color
        image: kodekloud/webapp-color
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-color-svc
  namespace: default
spec:
  selector:
    app: webapp-color
  ports:
    - targetPort: 8080
      port: 8080 
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-color-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: webapp-color-route
spec:
  hosts: ["*"]
  gateways:
  - webapp-color-gateway
  http:
  - route:
    - destination:
        host: webapp-color-svc
        subset: webapp-color-v1
        port:
          number: 8080
      weight: 50
    - destination:
        host: webapp-color-svc
        subset: webapp-color-v2
        port:
          number: 8080
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: webapp-color-destination
spec:
  host: "*"
  subsets:
  - name: webapp-color-v1
    labels:
      version: v1
  - name: webapp-color-v2
    labels:
      version: v2
---
#$ kubectl get gateway,virtualservice,destinationrule
#NAME                                               AGE
#gateway.networking.istio.io/webapp-color-gateway   13m

#NAME                                                    GATEWAYS                   HOSTS   AGE
#virtualservice.networking.istio.io/webapp-color-route   ["webapp-color-gateway"]   ["*"]   13m

#NAME                                                           HOST   AGE
#destinationrule.networking.istio.io/webapp-color-destination   *      13m

#$ kubectl get svc istio-ingressgateway -n istio-system
#NAME                   TYPE           CLUSTER-IP       EXTERNAL-IP    PORT(S)                                                                      AGE
#istio-ingressgateway   LoadBalancer   34.118.239.135   35.204.33.90   15021:31215/TCP,80:32149/TCP,443:31760/TCP,15012:31691/TCP,15443:30857/TCP   28m

#Test: curl http://35.204.33.90
